working with chrome, can display most recent 10 bookmarks

--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,5 @@
-<h1>sp-list</h1>
 <ul>
-    <li *ngFor="#bk of bookmarks">
-        <sp-bookmark>load individual bookmarks...</sp-bookmark>
-    </li>
+<li *ngFor="#bookmark of bookmarks">
+    {{bookmark.title}}
+</li>
 </ul>
