--- a/templates/list.html
+++ b/templates/list.html
@@ -1,7 +1,8 @@
 
 <ul>
-<li *ngFor="#bookmark of bookmarks">
-    <a href="{{bookmark.url}}">{{bookmark.title}}</a>
+<li *ngFor="#bookmark of bookmarks" (mouseenter)="mouseEnter(bookmark)" (mouseleave)="mouseLeave(bookmark)">
+        <a href="{{bookmark.url}}">{{bookmark.title}}</a>
+        <button (click)="click(bookmark)" [hidden]="!bookmark.show">remove</button>
 </li>
 </ul>
 
