--- a/templates/list.html
+++ b/templates/list.html
@@ -1,8 +1,9 @@
-<div style="display:flex;">
+<div id="shortcut">
 <ul *ngFor="#bookshelfName of bookShelfNames">
 <li class="bookmark" *ngFor="#bookmark of bookshelves[bookshelfName]">
-        <img src="chrome://favicon/size/16@1x/{{bookmark.url}}">
-        <a href="{{bookmark.url}}">{{bookmark.title}}</a>
+        <img src="chrome://favicon/size/16@1x/{{bookmark.url}}" width="16" height="16">
+        <span class="title">{{bookmark.title}}</span>
+        <a href="{{bookmark.url}}">{{bookmark.url}}</a>
         <span class="buttons">
             <button (click)="delete(bookmark)" >Delete</button>
             <button (click)="rename(bookmark)" >Rename</button>
