--- a/chromeExtensionAngularCli/src/app/app.component.html
+++ b/chromeExtensionAngularCli/src/app/app.component.html
@@ -2,7 +2,7 @@
 <ul *ngFor="let bookshelfName of bookShelfNames">
 <div>[{{bookshelfName}}]</div>
 <li class="bookmark" *ngFor="let bookmark of bookshelves[bookshelfName]">
-        <img src="chrome://favicon/size/16@1x/{{bookmark.url}}" width="16" height="16">
+        <img [src]="imageURL(bookmark)" width="16" height="16">
         <span class="title">{{bookmark.title.substring(bookshelfName.length+2)}}</span>
         <a href="{{bookmark.url}}">{{bookmark.url}}</a>
         <span class="buttons">
